--- a/package.json
+++ b/package.json
@@ -33,6 +33,20 @@
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.3.0",
     "eslint": "^7.7.0",
-    "jest": "^26.4.2"
+    "jest": "^26.4.2",
+    "lint-staged": "^10.2.11"
+  },
+  "engines": {
+    "node": ">=12.0.0",
+    "npm": ">=6.0.0"
+  },
+  "gitHooks": {
+    "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{js}": [
+      "lint",
+      "git add"
+    ]
   }
 }
