--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.3.0",
     "eslint": "^7.7.0",
+    "husky": "^4.2.5",
     "jest": "^26.4.2",
     "lint-staged": "^10.2.11"
   },
@@ -41,13 +42,16 @@
     "node": ">=12.18.3",
     "npm": ">=6.14.6"
   },
-  "gitHooks": {
-    "pre-commit": "lint-staged"
-  },
   "lint-staged": {
     "*.{js}": [
       "lint",
       "git add"
-    ]
+    ],
+    "*.js": "eslint --cache --fix"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
