build(package.json): update version to 1.2.0 and append CHANGELOG

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "javascript-playground",
-  "version": "1.2.0-beta",
+  "version": "1.2.0",
   "description": "JavaScript Playground",
   "license": "Apache-2.0",
   "author": {
