perf(lint-staged): update command
run 'npm run lint'

BREAKING CHANGE: unify EsLint command for lint-staged

--- a/package.json
+++ b/package.json
@@ -43,11 +43,7 @@
     "npm": ">=6.14.6"
   },
   "lint-staged": {
-    "*.{js}": [
-      "lint",
-      "git add"
-    ],
-    "*.js": "eslint --cache --fix"
+    "*.{js,jsx}": "npm run lint"
   },
   "husky": {
     "hooks": {
