--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "javascript-playground",
-  "version": "1.3.0",
+  "version": "1.4.0-beta",
   "description": "JavaScript Playground",
   "license": "Apache-2.0",
   "author": {
